test_case/rust-lang_rust/33418_447633469.rs
rust
trait Tr: !Sized {} //~ ERROR Negative trait bounds are not supported
